--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -39,10 +39,16 @@
   align-items: start;
 }
 
+/* Fix CSS grid blowout */
+.product-layout > * {
+  min-width: 0;
+}
+
 /* Infos produit */
 .product-info {
   position: sticky;
   top: calc(var(--header-height) + var(--space-xl));
+  min-width: 0;
 }
 
 .product-info__category {
